# silk-script

./: .clang-format  CMakeLists.txt  LICENSE  README.md  bruh.sce  conanfile.txt  crappy-benchmark.py  crappy-benchmark.silk  generate.sh  shell.nix  standardese.cfg
editors/vscode/: CHANGELOG.md  README.md  language-configuration.json  language-syntax.json  language-syntax.yaml  package.json
editors/vscode/syntaxes/: silkscript.tmLanguage.json
include/moth/: disas.h  env.h  ffi.h  file.h  garbage.h  macros.h  mem.h  object.h  opcode.h  program.h  rodata.h  stack.h  symtable.h  value.h  vm.h
include/silk/: error.h  lexer.h  parser.h  repl.h
include/silk/analyzers/: checker.h  parser.h
include/silk/ast/: ast.h  expr.h  stmt.h  token.h
include/silk/common/: ast copy.h  ast.h  checker.h  error.h  errors.h  lexer.h  parser.h  token.h
include/silk/compiler/: compiler.h  mothvm.h  type_checker.h  webasm.h
include/silk/debugger/: debugger.h
include/silk/interpreter/: repl.h
include/silk/interpreter/analyzers/: checker.h  parser.h
include/silk/interpreter/ast/: expr.h  expr_decl.h  stmt.h  stmt_decl.h
include/silk/interpreter/interfaces/: obj.h
include/silk/interpreter/runtime/: functions.h  interpreter.h  primitives.h  stdlib.h  structs.h
include/silk/language/: package.h  scanner.h  syntax_tree.h  token.h
include/silk/lexer/: lexer.h  token.h
include/silk/parser/: ast.h  parser.h  token.h
include/silk/pipeline/: context_builder.h  json_deserializer.h  json_serializer.h  optimizer.h  parser.h  stage.h  type_checker.h
include/silk/repl/: repl.h
include/silk/runtime/: functions.h  interpreter.h  interupt.h  objects.h  primitives.h  stdlib.h  structs.h
include/silk/runtime/abstract/: env.h  obj.h
include/silk/stages/: json_deserializer.h  json_serializer.h  optimizer.h  parser.h  pipeline.h  type_checker.h
include/silk/syntax/: package.h  scanner.h  token.h  tree.h
include/silk/targets/js/: transpiler.h
include/silk/targets/moth/: compiler.h
include/silk/targets/wasm/: compiler.h
include/silk/tools/: cli.h  debugger.h  repl.h  stprinter.h
include/silk/util/: cli.h  error.h  filepath.h  parameters.h
include/silk/utility/: cli.h
include/stdsilk/: bytes.h  bytes.silk  io.h  io.silk
include/util/: ast_print.h  err2str.h  tok2str.h  token_print.h
moth/: CMakeLists.txt
moth/include/util/: cli.h  message.h
moth/include/vm/: disas.h  env.h  file.h  garbage.h  hash_map.h  macros.h  mem.h  object.h  opcode.h  program.h  rodata.h  stack.h  symtable.h  value.h  vm.h
moth/source/: main.c
moth/source/util/: cli.c
moth/source/vm/: disas.c  env.c  file.c  garbage.c  hash_map.c  mem.c  object.c  program.c  rodata.c  stack.c  symtable.c  value.c  vm.c
plugins/vscode/: .gitignore  CHANGELOG.md  language-configuration.json
plugins/vscode/syntaxes/: silkscript.tmLanguage.json
silkvm/: CMakeLists.txt
silkvm/include/util/: message.h
silkvm/include/vm/: chunk.h  file_exec.h  macros.h  mem.h  object.h  rodata.h  stack.h  value.h  vm.h
silkvm/source/vm/: chunk.c  constants.c  disas.c  file_exec.c  mem.c  object.c  program.c  rodata.c  stack.c  value.c  vm.c
source/: main.cxx
source/common/: checker.cxx  error.cxx  lexer.cxx  parser.cxx
source/compiler/: compiler.cxx
source/debugger/: debugger.cxx
source/moth/: disas.c  env.c  ffi.c  file.c  garbage.c  mem.c  object.c  program.c  rodata.c  stack.c  symtable.c  value.c  vm.c
source/repl/: repl.cxx
source/silk/: main.cxx
source/silk/compiler/: compiler.cxx  mothvm.cxx  type_checker.cxx  webasm.cxx
source/silk/language/: package.cxx  scanner.cxx
source/silk/lexer/: lexer.cxx  token.cxx
source/silk/parser/: ast.cxx  parser.cxx  token.cxx
source/silk/pipeline/: context_builder.cxx  json_deserializer.cxx  json_serializer.cxx  optimizer.cxx  parser.cxx  stage.cxx  type_checker.cxx
source/silk/stages/: json_deserializer.cxx  json_serializer.cxx  optimizer.cxx  parser.cxx  pipeline.cxx  type_checker.cxx
source/silk/syntax/: package.cxx  scanner.cxx
source/silk/targets/moth/: compiler.cxx
source/silk/targets/wasm/: compiler.cxx
source/silk/tools/: cli.cxx  debugger.cxx  repl.cxx  stprinter.cxx
source/silk/util/: cli.cxx  error.cxx
source/silk/utility/: cli.cxx
source/stdsilk/: bytes.c  io.c
source/util/: cli.cxx  filepath.cxx
src/: error.cxx  lexer.cxx  main.cxx  parser.cxx  repl.cxx
src/analyzers/: checker.cxx  parser.cxx
src/ast/: token.cxx
src/common/: checker.cxx  error.cxx  lexer.cxx  token.cxx
src/compiler/: compiler.cxx
src/debugger/: debugger.cxx
src/interpreter/: repl.cxx
src/interpreter/analyzers/: checker.cxx  parser.cxx
src/interpreter/runtime/: functions.cxx  interpreter.cxx  primitives.cxx  stdlib.cxx  structs.cxx
src/runtime/: functions.cxx  interpreter.cxx  objects.cxx  primitives.cxx  stdlib.cxx  structs.cxx
src/util/: cli.cxx  filepath.cxx  parameters.cxx
vm/: CMakeLists.txt
vm/include/util/: cli.h  read_file.h
vm/include/vm/: chunk.h  constants.h  disas.h  file_exec.h  mem.h  object.h  opcode.h  program.h  stack.h  value.h  vm.h
vm/source/: main.c
vm/source/util/: cli.c  message.c  read_file.c
vm/source/vm/: constants.c  disas.c  file_exec.c  mem.c  stack.c  value.c  vm.c
